--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,19 +9,31 @@ Authors@R: c(
     person('Marco', 'Ghidina',
       email = 'MarcoGhidina@zetaresearch.com',
       role = c('ctb')
-    )
+    ),
     person('Zeta Research',
       role = c('cph')
     )
   )
 Description: Demo for the SusySafe 3d App.
 License: file LICENSE
-Imports: 
-    config,
-    golem,
-    shiny
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 URL: https://github.com/zeta-r/susy3dapp
 BugReports: https://github.com/zeta-r/susy3dapp/issues
+Config/testthat/edition: 3
+Language: en-US
+Roxygen: list(markdown = TRUE)
+Imports: 
+    attempt,
+    config,
+    DT,
+    glue,
+    golem,
+    htmltools,
+    processx,
+    shiny
+Suggests: 
+    spelling,
+    testthat (>= 3.0.0),
+    covr
