--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,15 +27,19 @@ Imports:
     magrittr,
     pkgload,
     processx,
+    rgl,
     rlang (>= 0.1.2),
     shiny,
-    tibble,
-    rgl
+    tibble
 Suggests: 
     covr,
+    knitr,
+    rmarkdown,
     roxygen2,
     spelling,
     testthat (>= 3.0.0)
+VignetteBuilder: 
+    knitr
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
