--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,9 @@ importFrom(rlang,enquos)
 importFrom(rlang,expr)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
+importFrom(shiny,NS)
 importFrom(shiny,column)
+importFrom(shiny,moduleServer)
 importFrom(shiny,shinyApp)
+importFrom(shiny,tagList)
 importFrom(tibble,tibble)
