Obj selector UI

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,9 @@ importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(shiny,NS)
 importFrom(shiny,column)
+importFrom(shiny,fluidRow)
 importFrom(shiny,moduleServer)
+importFrom(shiny,selectInput)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
 importFrom(tibble,tibble)
