--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(expr)
 export(run_app)
 export(sym)
 export(syms)
+import(ggplot2)
 import(shiny)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
@@ -35,6 +36,8 @@ importFrom(shiny,NS)
 importFrom(shiny,column)
 importFrom(shiny,fluidRow)
 importFrom(shiny,moduleServer)
+importFrom(shiny,plotOutput)
+importFrom(shiny,reactive)
 importFrom(shiny,selectInput)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
