Added barplot for death and complications, objects' table, and 3d image

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,10 @@ Imports:
     shiny,
     tibble,
     ggplot2,
-    dplyr
+    dplyr,
+    Rvcg,
+    stringr,
+    plotly
 Suggests: 
     covr,
     knitr,
