--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,13 +32,18 @@ importFrom(rlang,enquos)
 importFrom(rlang,expr)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
+importFrom(shiny,HTML)
 importFrom(shiny,NS)
+importFrom(shiny,actionButton)
 importFrom(shiny,column)
 importFrom(shiny,fluidRow)
+importFrom(shiny,h3)
 importFrom(shiny,moduleServer)
 importFrom(shiny,plotOutput)
 importFrom(shiny,reactive)
+importFrom(shiny,renderText)
 importFrom(shiny,selectInput)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
+importFrom(shiny,textOutput)
 importFrom(tibble,tibble)
